k8s/demo-db/np-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # allow access from backend
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: demo-app
          podSelector:
            matchLabels:
              app: backend
      ports:
        - protocol: TCP
          port: 5432
    # allow access from healthcheck agent
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: d8-service-with-healthchecks
          podSelector:
            matchLabels:
              app: agent
      ports:
        - protocol: TCP
          port: 5432
  egress:
    # access to outside to download packages and app sources
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
